fix sideways mobile photo viewer clipping

--- a/css/zoom.css
+++ b/css/zoom.css
@@ -1,6 +1,5 @@
 #photo-viewer-background {
     position: top var(--navBarSpace);
-    min-height: var(--veiwImageBGHeight);
     width: 100%;
     height: 100%;
     position: fixed;
@@ -17,4 +16,14 @@
     left: 0;
     right: 0;
     margin: auto;
+  }
+  #photo-viewer-reminder-text{
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    font-size: x-large;
+    padding-top: 2vw;
+  }
+  #photo-viewer-reminder-text:hover{
+    cursor:default;
   }
